[gd_scene load_steps=3 format=3 uid="uid://1tfrfruvfq7g"]

[ext_resource type="Script" uid="uid://cm67i62bg1ofi" path="res://scenes/ui/highscore_entry.gd" id="1_yvn2h"]
[ext_resource type="Texture2D" uid="uid://bu2javu6ivbji" path="res://assets/images/test/toilet_paper.png" id="2_ivtto"]

[node name="highscore_entry" type="PanelContainer"]
custom_minimum_size = Vector2(300, 25)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yvn2h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="value_rank" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Rang 01"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="value_playername" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "PlayerName"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_ivtto")
expand_mode = 1

[node name="value_collectables" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "x6"

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="value_time" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "00h:00m:00s:00ms"
